
[metadata]
name = Algo_AV
version = 0.0.1
author = Group3
author_email = ray-hann06@hotmail.fr
description = For optmize trucks delivery
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rayray06/AlgoAv/tree/main/Module
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True